View password and render backend connected

--- a/frontend/src/app/login/login.html
+++ b/frontend/src/app/login/login.html
@@ -14,11 +14,23 @@
                     <mat-label>Mot de passe</mat-label>
                     <input
                         matInput
-                        type="password"
+                        [type]="passwordFieldType"
                         [(ngModel)]="password"
                         name="password"
                         required
                     />
+                    <button
+                        mat-icon-button
+                        matSuffix
+                        (click)="togglePasswordVisibility()"
+                        type="button"
+                    >
+                        <mat-icon>{{
+                            passwordFieldType === "password"
+                                ? "visibility_off"
+                                : "visibility"
+                        }}</mat-icon>
+                    </button>
                 </mat-form-field>
 
                 <div class="actions">
